bdr.BDR.scala.error
Compilation error:
BDR:6: error: not found: value avancer
      avancer()
      ^BDR:10: error: not found: value avancer
      avancer()
      ^BDR:15: error: not found: value avancer
      avancer()
      ^BDR:18: error: not found: value avancer
      avancer()
      ^BDR:21: error: not found: value avancer
      avancer()
      ^BDR:22: error: not found: value avancer
      avancer()
      ^BDR:25: error: not found: value avancer
      avancer()
      ^BDR:26: error: not found: value avancer
      avancer()
      ^BDR:27: error: not found: value avancer
      avancer()
      ^BDR:30: error: not found: value reculer
      reculer()
      ^BDR:33: error: not found: value reculer
      reculer()
      ^BDR:34: error: not found: value reculer
      reculer()
      ^BDR:37: error: not found: value reculer
      reculer()
      ^BDR:38: error: not found: value reculer
      reculer()
      ^BDR:39: error: not found: value reculer
      reculer()
      ^